- sun Base64 encoder removed, now fully Java8 compliant code